--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,9 +10,11 @@ idf_component_register(
         "assets/wifi_configuration.html"
         "assets/wifi_configuration_done.html"
     REQUIRES
-    	"esp_timer"
+        "esp_timer"
         "esp_http_server"
         "esp_wifi"
         "nvs_flash"
         "json"
+    PRIV_REQUIRES
+        main
 )
